fix nav covering footer

--- a/themes/unya/sass/_navigation.scss
+++ b/themes/unya/sass/_navigation.scss
@@ -270,7 +270,7 @@ a {
 
 .site-footer.expanded {
 	position: absolute;
-	height: 30vh;
+	height: auto;
 	bottom: 0;
 	left: 0;
 	right: 0;
