--- a/themes/unya/style.css
+++ b/themes/unya/style.css
@@ -799,7 +799,7 @@ a {
 
 .site-footer.expanded {
   position: absolute;
-  height: 30vh;
+  height: auto;
   bottom: 0;
   left: 0;
   right: 0;
@@ -1348,9 +1348,6 @@ object {
     display: -ms-flexbox;
     display: flex; } }
 
-.nyc-content .image-carousel .slick-list {
-  height: 100%; }
-
 .nyc-content .image-carousel .image-container {
   position: relative;
   height: 750px;
@@ -1378,9 +1375,6 @@ object {
   z-index: 1;
   width: 100%;
   height: auto; }
-
-.nyc-content .image-carousel .gradient {
-  background-image: linear-gradient(to bottom, rgba(74, 74, 74, 0.7) 0%, rgba(74, 74, 74, 0.7) 100%); }
 
 .nyc-content .image-carousel .slick-prev {
   z-index: 10; }
